[tool.poetry]
name = "oiflib"
version = "0.1.0"
description = "OIF-related python libraries"
license = "MIT"
readme = "README.md"
documentation = "https://oiflib.readthedocs.io"
repository = "https://github.com/Defra-Data-Science-Centre-of-Excellence/oiflib"
authors = ["Ed Fawcett-Taylor <ed.fawcett-taylor@defra.gov.uk>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.1"
openpyxl = "^3.0.9"
pandera = "^0.9.0"
dill = "^0.3.4"
odfpy = "^1.4.1"
boto3 = "^1.21.0"
GitPython = "^3.1.26"

[tool.poetry.dev-dependencies]
coverage = {extras = ["toml"], version = "^5.4"}
pytest-cov = "^2.10.1"
flake8 = "^3.8.4"
flake8-black = "^0.2.1"
flake8-isort = "^4.0.0"
flake8-bugbear = "^20.11.1"
flake8-bandit = "^2.1.2"
flake8-annotations = "^2.5.0"
flake8-docstrings = "^1.5.0"
darglint = "^1.5.8"
Sphinx = "^3.4.2"
isort = "^5.7.0"
pre-commit = "^2.9.3"
jupyter = "^1.0.0"
safety = "^1.10.3"
hypothesis = "^6.1.1"
sphinx-rtd-theme = "^0.5.1"
recommonmark = "^0.7.1"
sphinx-autobuild = "^2020.9.1"
pytest-cases = "^3.2.1"
moto = {extras = ["s3"], version = "^2.0.1"}
codecov = "^2.1.11"
nox = "^2022.1.7"
nox-poetry = "^0.9.0"
black = "^22.1.0"
mypy = "^0.931"
types-requests = "^2.27.9"
pytest = "^7.0.1"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
omit = ["src/oiflib/core.py"]
source = ["oiflib"]

[tool.coverage.report]
show_missing = true
omit = ["src/oiflib/core.py"]
fail_under = 0

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["src", "test"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
